# web-SecureBeam

./: .gitignore  README.md  SECURITY.md  agents.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
client/: index.html  package.json  vite.config.ts
client/src/: App.vue
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: lib.rs  main.rs
client/src/assets/styles/: main.css
client/src/components/layout/: Header.vue
client/src/components/ui/: FlagIcon.vue
client/src/i18n/: index.ts
client/src/i18n/locales/: de.ts  en.ts  es.ts  fr.ts  it.ts  nl.ts  pl.ts  ru.ts  zh.ts
client/src/router/: index.ts
client/src/stores/: theme.ts
client/src/views/: HomeView.vue  ReceiveView.vue  SendView.vue  SettingsView.vue
core/: Cargo.toml
core/src/: crypto.rs  lib.rs  network.rs  protocol.rs  transfer.rs
core/src/crypto/: derive.rs  key_exchange.rs  mod.rs  secretbox.rs
core/src/transit/: connection.rs  direct.rs  hints.rs  mod.rs  relay.rs
core/tests/: integration_test.rs
deploy/: Caddyfile  deploy.sh  docker-compose.yml
frontend/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js
frontend/public/: 404.html
frontend/src/: App.vue  vite-env.d.ts
frontend/src/assets/styles/: main.css
frontend/src/components/common/: Button.vue  Modal.vue  Spinner.vue
frontend/src/components/layout/: Footer.vue  Header.vue
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: de.ts  en.ts  es.ts  fr.ts  it.ts  nl.ts  pl.ts  ru.ts  zh.ts
frontend/src/router/: index.ts
frontend/src/stores/: theme.ts
frontend/src/views/: HomeView.vue  ImpressumView.vue  LegalView.vue  PrivacyView.vue
nginx/: nginx.conf
nginx/conf.d/: securebeam.conf
prometheus/: prometheus.yml
relay-server/: Cargo.toml  Dockerfile
relay-server/src/: main.rs  relay.rs
scripts/: build-appimage.sh
server/: Cargo.toml  Dockerfile
server/src/: config.rs  main.rs
server/src/handlers/: health.rs  mod.rs  session.rs
server/src/models/: mailbox.rs  messages.rs  mod.rs  nameplate.rs  session.rs  state.rs
server/src/ws/: handler.rs  mod.rs  peer_handler.rs
