[package]
name = "securebeam-relay"
version = "1.0.0"
edition = "2021"
authors = ["SecureBeam Team"]
description = "SecureBeam Transit Relay Server for P2P fallback"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Networking
tokio-util = { version = "0.7", features = ["codec", "io"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"

# Utilities
hex = "0.4"
thiserror = "1.0"

[[bin]]
name = "securebeam-relay"
path = "src/main.rs"
