[package]
name = "securebeam-server"
version = "0.1.0"
edition = "2021"
authors = ["SecureBeam Team"]
description = "SecureBeam Signaling Server for P2P file transfers"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }

# WebSocket support
tokio-tungstenite = "0.21"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"
thiserror = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "securebeam-server"
path = "src/main.rs"
